# korean-terminal

./: .gitignore  main.js  package-lock.json  package.json  preload.js  requirements.txt  server.py
.claude/: settings.local.json
docs/: .bkit-memory.json  .pdca-status.json
docs/01-plan/features/: electron-migration.plan.md  split-pane-system.plan.md
docs/02-design/features/: split-pane-system.design.md
scripts/: build-mac.sh
src/: context-menu.js  dir-autocomplete.js  favorites.js  hangul-compose.js  hw-monitor.js  ime-indicator.js  index.html  layout-persist.js  md-sidebar.js  pane.js  renderer.js  settings.js  split.js  styles.css  tabs.js  tauri-bridge.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pty_manager.rs
static/: index.html
